<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/TpnAct1"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/tpn_logo"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/et_username"
        style="@style/TpnET1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_username"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:singleLine="true"

        />
    <EditText
        android:id="@+id/et_password"
        style="@style/TpnET1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_password"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:singleLine="true"

        />


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_login"
        style="@style/TpnBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        fancy:fb_text="@string/btn_logIn"
        android:onClick="goToUserPageActivity"
    ></mehdi.sakout.fancybuttons.FancyButton>



    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_signIn"
        style="@style/TpnBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        fancy:fb_text="@string/btn_register"
        android:onClick="goToSignInActivity"
        ></mehdi.sakout.fancybuttons.FancyButton>


</LinearLayout>
</ScrollView>
